fix: reduce spacing further

--- a/src/components/CurrentRefinements.scss
+++ b/src/components/CurrentRefinements.scss
@@ -1,9 +1,7 @@
-@import '../config/variables';
-
 .ais-CurrentRefinements {
-  padding-top: 1.5rem;
-  @media (max-width: $breakpoint-sm) {
-    padding-top: 1rem;
+  padding-top: 1rem;
+  @media (--algolia-theme-breakpoint-sm-max) {
+    padding-top: 0.5rem;
   }
 }
 
